--- a/index.html
+++ b/index.html
@@ -15,7 +15,41 @@
   </head>
   <body>
     <div class="container">
-      <h1>WeatherApp</h1>
+      <div class="weather-app">
+        <form class="search-form" id="search-form">
+          <div class="row justify-content-center">
+            <div class="col-5">
+              <input
+                type="text"
+                class="form-control shadow-sm"
+                autocomplete="off"
+                placeholder="Enter your city..."
+                autofocus="on"
+                id="city-input"
+              />
+            </div>
+            <div class="col-3">
+              <input
+                type="submit"
+                value="Search"
+                class="btn btn-primary w-100 shadow-sm"
+                id="btn"
+              />
+            </div>
+          </div>
+        </form>
+          <div class="row justify-content-center">
+            <div class="col-5">
+ <h1 class="city">New York</h1>
+ <ul class="description">
+   <li class="li formatted-date">Day, <span class="weather">Weather</span></li>
+   <li>Humidity: 43%</li>
+<li>Wind: 10 km/h</li>
+        </div>
+         <div class="col-3 temp"><span class="temp-number">15</span><span class="small-font">°C</span></div>
+         </div>
+
+
       <script src="src/index.js"></script>
     </div>
   </body>
