Body color changed

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     />
     <title>WeatherAppbyDaria</title>
   </head>
-  <body>
+  <body class="body">
     <div class="container">
       <div class="weather-app bg-white border border-right-0 rounded shadow-sm">
         <form class="search-form" id="search-form">
           <div class="row justify-content-center">
-            <div class="col-5">
+            <div class="col-6">
               <input
                 type="text"
                 class="form-control shadow-sm"
@@ -39,7 +39,7 @@
           </div>
         </form>
         <div class="row justify-content-center">
-            <div class="col-5">
+            <div class="col-6">
  <h1 class="city">New York</h1>
  <ul class="description">
    <li class="li formatted-date">Day, <span class="weather">Weather</span></li>
@@ -58,7 +58,6 @@
       </div>
        <footer>Coded by DariaDeg</footer>
     </div>
-   
 </div>
     <script src="src/index.js"></script>
   </body>
