--- a/index.html
+++ b/index.html
@@ -38,27 +38,34 @@
             </div>
           </div>
         </form>
-        <div class="row justify-content-center">
             <div class="col-6">
  <h1 class="city">New York</h1>
  <ul class="description">
-   <li class="li formatted-date">Day, <span class="weather">Weather</span></li>
-   <li>Humidity: 43%</li>
-<li>Wind: 10 km/h</li>
-        </div>
-         <div class="col-3 d-flex justify-content-center">
-           <h4 class="dino">🦕</h4>
-           <div class="d-flex flex-row"><span class="temp-number">15</span><span class="units">°C</span></div>
-        </div>
-        <div class="fiveday-forecast row flex-row">
-          <div class="col"><div class="WeatherForecastPreview">
-            <div class="forecast-time">Tue</div><canvas width="28" height="28"></canvas><div class="forecast-temperature"><span class="forecast-temperature-max">7°</span><span class="forecast-temperature-min">4°</span></div></div></div>
-            <div class="col"><div class="WeatherForecastPreview"><div class="forecast-time">Wed</div><canvas width="38" height="38"></canvas><div class="forecast-temperature"><span class="forecast-temperature-max">6°</span><span class="forecast-temperature-min">4°</span></div></div></div><div class="col"><div class="WeatherForecastPreview"><div class="forecast-time">Thu</div><canvas width="38" height="38"></canvas><div class="forecast-temperature"><span class="forecast-temperature-max">4°</span><span class="forecast-temperature-min">1°</span></div></div></div>
-            <div class="col"><div class="WeatherForecastPreview"><div class="forecast-time">Fri</div><canvas width="38" height="38"></canvas><div class="forecast-temperature"><span class="forecast-temperature-max">9°</span><span class="forecast-temperature-min">4°</span></div></div></div><div class="col"><div class="WeatherForecastPreview"><div class="forecast-time">Sat</div><canvas width="38" height="38"></canvas><div class="forecast-temperature"><span class="forecast-temperature-max">17°</span><span class="forecast-temperature-min">8°</span></div></div></div></div>
-      </div>
-       <footer>Coded by DariaDeg</footer>
-    </div>
+   <li class="formatted-date">
+     Saturday, 11 December 2021
+    </li>
+    <li>
+      Clear
+     </li>
+ </ul>
 </div>
+     <div class="row">
+       <div class="col-6">
+           <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+           class="weather-logo"
+           alt="Cloudy"
+           />15</span><span class="units">°C|°F</span></span> 
+</div>
+    <div class="col-3">
+ <ul class="description">
+   <li>Precipitation: 5%</li>
+   <li>Humidity: 43%</li>
+   <li>Wind: 10 km/h</li>
+        </div>
+         </div>
+</div>
+</div>
+<footer>Coded by DariaDeg, open-sourced to <a href="https://github.com/DariaDeg/Vanilla-weather-app-online">GitHub</a></footer>
     <script src="src/index.js"></script>
   </body>
 </html>
