--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="shortcut icon" href="/PATH_TO_STATIC_FAVICON/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/PATH_TO_STATIC_FAVICON/favicon.ico" type="image/x-icon">
     <title>WeatherAppbyDaria</title>
   </head>
   <body class="body">
