--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="col-9">
  <h1 id="city"></h1>
  <ul>
-   <li class="formatted-date">
+   <li id="date">
      Saturday, 11 December 2021
     </li>
     <li id="descr">
