Weather icon integration added

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
      <div class="row justify-content-center">
        <div class="col-6">
          <div class="clearfix weather-temperature">
-           <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-          alt="Cloudy"
+           <img src=""
            class="float-left"
+           id="icon"
           /><span class="float-left" ><strong id="temperature"></strong><span class="units">°C| <a href="#" style="text-decoration: none;">°F</a></span></span>
 
 </div>
