Css styles coordinated with icon colors

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
            <img src=""
            class="float-left"
            id="icon"
-          /><span class="float-left" ><strong id="temperature"></strong><span class="units">°C| <a href="#" style="text-decoration: none;">°F</a></span></span>
+          /><span class="float-left" ><strong id="temperature"></strong><span class="units">°C | <a href="#" style="text-decoration: none; color:#e96e50;">°F</a></span></span>
 
 </div>
 </div>
@@ -77,7 +77,7 @@
 </div>
 </div>
 
-<footer>Coded by DariaDeg, open-sourced to <a href="https://github.com/DariaDeg/Vanilla-weather-app-online">GitHub</a></footer>
+<footer>Coded by DariaDeg, open-sourced to <a href="https://github.com/DariaDeg/Vanilla-weather-app-online" style="color:#e96e50">GitHub</a></footer>
     <script src="src/index.js"></script>
   </body>
 </html>
