Search engine started

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <div class="container">
       <div class="weather-app-wrapper">
        <div class="weather-app bg-white border rounded shadow-sm">
-        <form class="search-form" id="search-form">
+        <form id="search-form" class="mb-3">
           <div class="row justify-content-center">
             <div class="col-6">
               <input
-                type="text"
+                type="search"
                 class="form-control shadow-sm"
                 autocomplete="off"
                 placeholder="Enter your city..."
