Cel and Far conversion set

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
            <img src=""
            class="float-left"
            id="icon"
-          /><span class="float-left" ><strong id="temperature"></strong><span class="units">°C | <a href="#" style="text-decoration: none; color:#e96e50;">°F</a></span></span>
+          /><span class="float-left" ><strong id="temperature"></strong><span class="units"><a href="#" style="text-decoration: none" id="celsius-link" class="active">°C</a> | <a href="#" style="text-decoration: none;" id="fahrenheit-link">°F</a></span></span>
 
 </div>
 </div>
