Forecast built with JS

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
         </div>
          </div>
 </div>
-<div class="weather-forecast">
+<div class="weather-forecast" id="weather-forecast">
   <div class="row">
     <div class="col-2">
       <div class="weather-forecast-date">
       Thu</div>
-      <img src="http://openweathermap.org/img/wn/50d@2x.png"
+      <img src="https://openweathermap.org/img/wn/50d@2x.png"
       alt="weather"
       width="30"
       />
@@ -88,9 +88,8 @@
   </div>
 </div>
 </div>
-
 </div>
-
+</div>
 </div>
 
 <footer>Coded by DariaDeg, open-sourced to <a href="https://github.com/DariaDeg/Vanilla-weather-app-online" style="color:#e96e50">GitHub</a></footer>
