Forecast columns centered + padding

--- a/index.html
+++ b/index.html
@@ -73,25 +73,14 @@
         </div>
          </div>
 </div>
-<div class="weather-forecast" id="weather-forecast">
-  <div class="row">
-    <div class="col-2">
-      <div class="weather-forecast-date">
-      Thu</div>
-      <img src="https://openweathermap.org/img/wn/50d@2x.png"
-      alt="weather"
-      width="30"
-      />
-      <div class="weather-forecast-temperature">
-        <span class="weather-forecast-temperature-max">18°</span>
-    <span class="weather-forecast-temperature-min">12°</span></div>
-  </div>
+<div class="row justify-content-center">
+  <div class="col-9">
+<div class="weather-forecast" id="weather-forecast"></div>
 </div>
 </div>
 </div>
 </div>
 </div>
-
 <footer>Coded by DariaDeg, open-sourced to <a href="https://github.com/DariaDeg/Vanilla-weather-app-online" style="color:#e96e50">GitHub</a></footer>
     <script src="src/index.js"></script>
   </body>
