Fahrenheit conversion removed

--- a/index.html
+++ b/index.html
@@ -62,14 +62,13 @@
            <img src=""
            class="float-left"
            id="icon"
-          /><span class="float-left" ><strong id="temperature"></strong><span class="units"><a href="#" style="text-decoration: none" id="celsius-link" class="active">°C</a> | <a href="#" style="text-decoration: none;" id="fahrenheit-link">°F</a></span></span>
-
+          /><span class="float-left" ><strong id="temperature"></strong><span class="units">°C</span>
 </div>
 </div>
     <div class="col-3">
  <ul class="description">
    <li>Humidity: <span id="humidity"></span>%</li>
-   <li>Wind: <span id="wind"></span>km/h</li>
+   <li>Wind: <span id="wind"></span>m/s</li>
         </div>
          </div>
 </div>
